# osmid

./: .gitignore  CMakeLists.txt
external_libs/oscpack_1_1_0/: CMakeLists.txt
src/: m2o.cpp  midicommon.cpp  midicommon.h  midiin.cpp  midiin.h  midiinprocessor.cpp  midiinprocessor.h  midiout.cpp  midiout.h  monitorlogger.h  o2m.cpp  osc_sink.h  oscin.cpp  oscinprocessor.cpp  oscinprocessor.h  oscout.cpp  utils.cpp
